# mtg-builder

./: .gitignore  LICENSE  README.md  mtg-builder.cabal  stack.yaml
src/: Data.hs  Effects.hs  Main.hs
src/Mtg/: Cards.hs  Data.hs  Decks.hs  Effects.hs  Statistics.hs
